apps/comet/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comet
  namespace: media
spec:
  selector:
    matchLabels:
      app: comet
  template:
    metadata:
      labels:
        app: comet
    spec:
      containers:
        - name: comet
          image: g0ldyy/comet
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: comet-data
              mountPath: /app/data
      volumes:
        - name: comet-data
          persistentVolumeClaim:
            claimName: comet-data-pvc
