apps/comet/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: comet
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: traefik.alixroden.co.uk
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`comet.alixroden.co.uk`)
      kind: Rule
      services:
        - name: comet
          port: 8000
  ingressClassName: traefik
  tls:
    secretName: alixroden-co-uk-tls
