apps/comet/out.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: comet
  name: comet
  namespace: media
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: comet
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comet
  namespace: media
spec:
  selector:
    matchLabels:
      app: comet
  template:
    metadata:
      labels:
        app: comet
    spec:
      containers:
      - env:
        - name: DATABASE_TYPE
          value: postgresql
        - name: DATABASE_URL
          value: app:6WcQS7IvEm988NeNvAvImWDnEyB6mKjXWAUUymLNRmUYiW765mp6VDmUIJNdvfSk@postgresql-rw.infra.svc.cluster.local:5432/comet
        - name: TZ
          value: Europe/Helsinki
        - name: ADMIN_DASHBOARD_PASSWORD
          value: admin
        image: g0ldyy/comet
        name: comet
        ports:
        - containerPort: 8000
        volumeMounts:
        - mountPath: /app/data
          name: comet-data
      volumes:
      - name: comet-data
        persistentVolumeClaim:
          claimName: comet-data-pvc
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/target: traefik.alixroden.co.uk
  name: comet
  namespace: media
spec:
  entryPoints:
  - websecure
  ingressClassName: traefik
  routes:
  - kind: Rule
    match: Host(`comet.alixroden.co.uk`)
    middlewares:
    - name: traefik-forward-auth
      namespace: traefik
    services:
    - name: comet
      port: 8000
  tls:
    secretName: alixroden-co-uk-tls
